# opencodex

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  globals.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fs.rs  kv.rs  lib.rs  main.rs  paths.rs  proxy.rs  quick.rs  tasks.rs  term.rs
src-tauri/src/agent/: claude.rs  mod.rs  protocol.rs
src/components/: SettingsDialog.tsx
src/lib/: cn.ts
src/opencodex/: OpenCodex.tsx  SessionList.tsx  SplitArea.tsx  store.tsx  types.ts
src/opencodex/panels/: BrowserPanel.tsx  FilesPanel.tsx  TermPanel.tsx
src/opencodex/term/: SplitContainer.tsx  useTermGroup.ts
