[package]
name = "opencodex"
version = "0.3.1"
description = "OpenCodex — 开源绿色的本地编程工作台：以文件夹为基础的多终端 AI 编程与管理"
authors = ["OpenCodex Contributors"]
edition = "2021"

[lib]
name = "opencodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 应用内真终端（PTY）—— Rust 拥有伪终端，注入便携 Node/Python PATH，claude/codex 可直接跑
portable-pty = "0.8"
# 系统剪贴板读写 —— WebView2 的 navigator.clipboard 在终端焦点下常拿不到权限，
# 改走 Rust 直读系统剪贴板，复制/粘贴 100% 可靠。纯 Rust、跨平台、体积小。
arboard = "3"

[profile.release]
# 体积优先：绿色 exe 要小。LTO + strip + opt-z 把 exe 压到最小。
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
